--- a/index.html
+++ b/index.html
@@ -9,6 +9,155 @@
     <link href="./index.css" rel="stylesheet" />
   </head>
   <body>
-    <h1 class="text-center text-4xl my-20">START</h1>
+    <header class="mb-20">
+      <nav class="shadow h-30 rounded-b-[33px]">
+        <div class="max-w-7xl mx-auto flex justify-between h-full items-center">
+          <img src="./imgs/logo 1.svg" alt="" />
+          <ul class="flex gap-4.5 text-lg">
+            <li>
+              <a href="./index.html">Главная</a>
+            </li>
+            <li>
+              <a href="./pages/product.html">Скачать продукт</a>
+            </li>
+            <li>
+              <a href="./pages/docs.html">Документация</a>
+            </li>
+            <li>
+              <a href="./pages/price.html">Цены</a>
+            </li>
+            <li>
+              <a href="./pages/contact.html">Контакты</a>
+            </li>
+          </ul>
+          <div class="flex gap-4.5">
+            <button class="button_border py-4 px-4.5 text-lg rounded-full">
+              <span>Скачать демо</span>
+            </button>
+            <button class="button_border py-4 px-4.5 text-lg rounded-full">
+              <span>Получить консультацию</span>
+            </button>
+          </div>
+        </div>
+      </nav>
+      <div class="max-w-7xl mx-auto">
+        <div class="flex flex-col">
+          <div class="flex mt-[42px] h-full">
+            <div class="mr-[22px] max-w-[600px]">
+              <h1 class="text-[#221955] text-[60px] font-bold leading-[100%]">
+                Дипломы и аттестаты с
+                <span class="text_gradient">QR-защитой</span>
+              </h1>
+              <p class="text-[#221955] text-[30px] leading-[100%] mt-[50px]">
+                Автоматизация печати и заполнения документов в школах, колледжах
+                и вузах
+              </p>
+              <div class="flex justify-end">
+                <div
+                  class="shadow2 py-12 px-[10px] w-[203px] text-center rounded-[33px] mr-20 mt-[10px]"
+                >
+                  <p class="text-[#615E83] leading-[18px] mb-6">
+                    Система печати на бланках
+                  </p>
+                  <p class="text-[#615E83] leading-[18px]">
+                    Автоматизация документооборота в образовании
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="relative flex items-center justify-center h-full">
+              <img src="./imgs/hero.png" alt="" class="h-full" />
+              <div
+                class="shadow2 h-[63px] w-[233px] flex flex-col justify-center text-center rounded-[12px] absolute bg-white right-[11px] bottom-[-21px]"
+              >
+                <p class="text-[#323142] mb-3 text-[11px] font-semibold">
+                  Печать дипломов
+                </p>
+                <p class="text-[#323142] text-[7px]">Аттестаты с QR-кодом</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="flex gap-12 mt-8 relative">
+          <img
+            src="./imgs/icon1.svg"
+            alt=""
+            class="absolute left-[250px] top-[-40px]"
+          />
+          <button
+            class="px-4 h-[60px] w-[257px] text-[24px] button_bg rounded-full"
+          >
+            <span class="text-white">Скачать демо</span>
+          </button>
+          <button
+            class="button_border w-[427px] px-4 h-[60px] text-[24px] rounded-full"
+          >
+            <span class="text_gradient">Получить консультацию</span>
+          </button>
+        </div>
+      </div>
+    </header>
+    <main class="">
+      <section class="relative pt-10 mt-10">
+        <div class="ellipse"></div>
+        <div class="ellipse1"></div>
+        <div class="ellipse2"></div>
+        <h2
+          class="text-[#221955] text-[60px] font-bold leading-[100%] text-center mb-9"
+        >
+          Печатаем
+          <span class="text_gradient">документы</span>
+        </h2>
+        <div class="max-w-7xl mx-auto flex justify-between">
+          <div class="flex flex-col mt-9">
+            <button
+              class="w-[373px] h-[132px] rounded-[33px] button_bg1 text-[30px] text-white"
+            >
+              Приложения
+            </button>
+            <button
+              class="w-[373px] h-[132px] rounded-[33px] button_bg2 text-[30px] text-white mt-[92px] mb-[73px]"
+            >
+              Любые бланки
+            </button>
+            <button
+              class="w-[373px] h-[132px] rounded-[33px] button_bg3 text-[30px] text-white"
+            >
+              Свидетельства
+            </button>
+          </div>
+          <div class="flex flex-col mt-9 justify-center gap-[208px]">
+            <button
+              class="w-[373px] h-[132px] rounded-[33px] button_bg3 text-[30px] text-white"
+            >
+              Дипломы
+            </button>
+
+            <button
+              class="w-[373px] h-[132px] rounded-[33px] button_bg1 text-[30px] text-white"
+            >
+              Грамоты
+            </button>
+          </div>
+          <div class="flex flex-col mt-9">
+            <button
+              class="w-[373px] h-[132px] rounded-[33px] button_bg1 text-[30px] text-white"
+            >
+              Выписки
+            </button>
+            <button
+              class="w-[373px] h-[132px] rounded-[33px] button_bg2 text-[30px] text-white mt-[92px] mb-[73px]"
+            >
+              Аттестаты
+            </button>
+            <button
+              class="w-[373px] h-[132px] rounded-[33px] button_bg3 text-[30px] text-white"
+            >
+              Справки
+            </button>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
