--- a/pages/price.html
+++ b/pages/price.html
@@ -1,204 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IQ Blank</title>
 
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <link href="../index.css" rel="stylesheet" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>IQ Blank</title>
 
-  <body>
-    <header class="mb-20">
-      <nav class="shadow2 h-30 rounded-b-[33px]">
-        <div class="max-w-7xl mx-auto flex justify-between h-full items-center">
-          <img src="../imgs/logo 1.svg" alt="" />
-          <ul class="flex gap-4.5 text-lg">
-            <li>
-              <a href="../index.html">Главная</a>
-            </li>
-            <li>
-              <a href="../pages/product.html">Скачать продукт</a>
-            </li>
-            <li>
-              <a href="../pages/docs.html">Документация</a>
-            </li>
-            <li>
-              <a href="../pages/price.html">Цены</a>
-            </li>
-            <li>
-              <a href="../pages/contact.html">Контакты</a>
-            </li>
-          </ul>
-          <div class="flex gap-4.5">
-            <button class="button_border py-4 px-4.5 text-lg rounded-full">
-              <span>Скачать демо</span>
-            </button>
-            <button class="button_border py-4 px-4.5 text-lg rounded-full">
-              <span>Получить консультацию</span>
-            </button>
-          </div>
+  <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+  <link href="../index.css" rel="stylesheet" />
+</head>
+
+<body>
+  <header class="mb-20">
+    <nav class="shadow2 h-30 rounded-b-[33px]">
+      <div class="max-w-7xl mx-auto flex justify-between h-full items-center">
+        <img src="../imgs/logo 1.svg" alt="" />
+        <ul class="flex gap-4.5 text-lg">
+          <li>
+            <a href="../index.html">Главная</a>
+          </li>
+          <li>
+            <a href="../pages/product.html">Скачать продукт</a>
+          </li>
+          <li>
+            <a href="../pages/docs.html">Документация</a>
+          </li>
+          <li>
+            <a href="../pages/price.html">Цены</a>
+          </li>
+          <li>
+            <a href="../pages/contact.html">Контакты</a>
+          </li>
+        </ul>
+        <div class="flex gap-4.5">
+          <button class="button_border py-4 px-4.5 text-lg rounded-full">
+            <span>Скачать демо</span>
+          </button>
+          <button class="button_border py-4 px-4.5 text-lg rounded-full">
+            <span>Получить консультацию</span>
+          </button>
         </div>
-      </nav>
-    </header>
-    <main>
-      <section class="container max-w-7xl mx-auto">
-        <h1
-          class="text-[60px] leading-[100%] text-[#221955] font-bold text-center"
-        >
-          Цены на программу для печати
-          <span class="text-[#6A6BF8]">
-            на <br />
-            бланках документов IQ Blank
-          </span>
-        </h1>
-        <h2
-          class="text-[25px] mt-[32px] leading-[38px] text-[#221955] font-bold text-center"
-        >
-          Стоимость лицензии на программное обеспечение
-          <span class="text-[#6A6BF8]">
-            для печати аттестатов, дипломов, справок и <br />
-            других официальных документов с QR-кодами
-          </span>
-        </h2>
-        <div class="flex justify-center">
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="container max-w-7xl mx-auto">
+      <h1 class="text-[60px] leading-[100%] text-[#221955] font-bold text-center">
+        Цены на программу для печати
+        <span class="text-[#6A6BF8]">
+          на <br />
+          бланках документов IQ Blank
+        </span>
+      </h1>
+      <h2 class="text-[25px] mt-[32px] leading-[38px] text-[#221955] font-bold text-center">
+        Стоимость лицензии на программное обеспечение
+        <span class="text-[#6A6BF8]">
+          для печати аттестатов, дипломов, справок и <br />
+          других официальных документов с QR-кодами
+        </span>
+      </h2>
+      <div class="flex justify-center">
+        <button class="button_border mt-[42px] px-[30px] py-[16px] text-[24px] rounded-full">
+          <span>Скачать демо-версию</span>
+        </button>
+      </div>
+      <h1 class="text-[50px] leading-[100%] text-[#221955] font-bold text-center mt-[97px]">
+        Варианты <span class="text-[#6A6BF8]">лицензий и стоимости </span>
+      </h1>
+      <h2 class="text-[25px] mt-[50px] leading-[38px] text-[#221955] font-bold text-center">
+        Выберите нужную версию: для печати бланков аттестатов, дипломов СПО и
+        приложений.
+        <span class="text-[#6A6BF8]">
+          Обе <br />
+          версии лицензируются по простой и прозрачной модели.
+        </span>
+      </h2>
+    </section>
+
+    <section class="container max-w-7xl mx-auto mt-[100px]">
+      <div class="flex items-center justify-center gap-[104px]">
+        <!-- Card 1 -->
+        <div class="bg-white rounded-[30px] shadow-md w-[480px] h-[480px] p-6 flex flex-col justify-between">
+          <div>
+            <div
+              class="text-[25px] leading-[100%] text-white bg-purple-500 px-[17px] py-[6px] rounded-full inline-block mb-[49px]">
+              IQ Blank 1.0 (Аттестаты)
+            </div>
+            <div class="text-[30px] font-bold mb-[26px] text-[#212D31]">
+              1 лицензия — <span class="">3000 ₽</span>
+            </div>
+            <ul class="text-gray-700 text-[20px] leading-[100%] text-[#212D31] font-normal space-y-4">
+              <li>✅ Использовать на одном компьютере</li>
+              <li>✅ Поддержка и обновления — 1500 ₽ в год</li>
+              <li>✅ Доступ к обновлениям</li>
+              <li>✅ Локальная база, работа без интернета</li>
+            </ul>
+          </div>
           <button
-            class="button_border mt-[42px] px-[30px] py-[16px] text-[24px] rounded-full"
-          >
-            <span>Скачать демо-версию</span>
+            class="mt-[90px] border-2 border-purple-400  rounded-full py-2 text-base font-medium hover:bg-purple-50 transition">
+            Получить лицензию
           </button>
         </div>
-        <h1
-          class="text-[50px] leading-[100%] text-[#221955] font-bold text-center mt-[97px]"
-        >
-          Варианты <span class="text-[#6A6BF8]">лицензий и стоимости </span>
-        </h1>
-        <h2
-          class="text-[25px] mt-[50px] leading-[38px] text-[#221955] font-bold text-center"
-        >
-          Выберите нужную версию: для печати бланков аттестатов, дипломов СПО и
-          приложений.
-          <span class="text-[#6A6BF8]">
-            Обе <br />
-            версии лицензируются по простой и прозрачной модели.
-          </span>
-        </h2>
-      </section>
 
-      <section class="container max-w-7xl mx-auto mt-[100px]">
-        <div class="flex items-center justify-center gap-[104px]">
-          <!-- Card 1 -->
-          <div
-            class="bg-white rounded-[30px] shadow-md w-[480px] h-[480px] p-6 flex flex-col justify-between"
-          >
-            <div>
-              <div
-                class="text-[25px] leading-[100%] text-white bg-purple-500 px-[17px] py-[6px] rounded-full inline-block mb-[49px]"
-              >
-                IQ Blank 1.0 (Аттестаты)
-              </div>
-              <div class="text-[30px] font-bold mb-[26px] text-[#212D31]">
-                1 лицензия — <span class="">3000 ₽</span>
-              </div>
-              <ul
-                class="text-gray-700 text-[20px] leading-[100%] text-[#212D31] font-normal space-y-4"
-              >
-                <li>✅ Использовать на одном компьютере</li>
-                <li>✅ Поддержка и обновления — 1500 ₽ в год</li>
-                <li>✅ Доступ к обновлениям</li>
-                <li>✅ Локальная база, работа без интернета</li>
-              </ul>
+        <!-- Card 2 -->
+        <div class="bg-white rounded-[30px] shadow-md w-[480px] h-[480px] p-6 flex flex-col justify-between">
+          <div>
+            <div
+              class="text-[25px] leading-[100%] text-white bg-purple-500 px-[17px] py-[6px] rounded-full inline-block mb-[49px]">
+              IQ Blank 2.0 (Дипломы СПО)
             </div>
-            <button
-              class="mt-[90px] border-2 border-purple-400 text-purple-500 rounded-full py-2 text-base font-medium hover:bg-purple-50 transition"
-            >
-              Получить лицензию
-            </button>
-          </div>
-
-          <!-- Card 2 -->
-          <div
-            class="bg-white rounded-[30px] shadow-md w-[480px] h-[480px] p-6 flex flex-col justify-between"
-          >
-            <div>
-              <div
-                class="text-[25px] leading-[100%] text-white bg-purple-500 px-[17px] py-[6px] rounded-full inline-block mb-[49px]"
-              >
-                IQ Blank 2.0 (Дипломы СПО)
-              </div>
-              <div class="text-[30px] font-bold mb-[26px] text-[#212D31]">
-                1 лицензия — <span class="font-bold">3000 ₽</span>
-              </div>
-              <ul
-                class="text-gray-700 text-[20px] leading-[100%] text-[#212D31] font-normal space-y-4"
-              >
-                <li>✅ Использовать на одном компьютере</li>
-                <li>✅ Поддержка и обновления — 1500 ₽ в год</li>
-                <li>✅ Доступ к обновлениям</li>
-                <li>✅ Перенос лицензии</li>
-                <li>✅ Локальная база, работа без интернета</li>
-                <li>✅ Печать дипломов, приложений</li>
-              </ul>
+            <div class="text-[30px] font-bold mb-[26px] text-[#212D31]">
+              1 лицензия — <span class="font-bold">3000 ₽</span>
             </div>
-            <button
-              class="border-2 border-purple-400 text-purple-500 rounded-full py-2 text-base font-medium hover:bg-purple-50 transition"
-            >
-              Получить лицензию
-            </button>
+            <ul class="text-gray-700 text-[20px] leading-[100%] text-[#212D31] font-normal space-y-4">
+              <li>✅ Использовать на одном компьютере</li>
+              <li>✅ Поддержка и обновления — 1500 ₽ в год</li>
+              <li>✅ Доступ к обновлениям</li>
+              <li>✅ Перенос лицензии</li>
+              <li>✅ Локальная база, работа без интернета</li>
+              <li>✅ Печать дипломов, приложений</li>
+            </ul>
           </div>
+          <button
+            class="border-2 border-purple-400  rounded-full py-2 text-base font-medium hover:bg-purple-50 transition">
+            Получить лицензию
+          </button>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="container max-w-7xl mx-auto mt-[150px] mb-[50px]">
-        <h2
-          class="text-[50px] leading-[100%] text-[#221955] font-bold text-center"
-        >
-          Что входит <span class="text-[#6A6BF8]"> в стоимость</span>
-        </h2>
-        <h3
-          class="text-[25px] mt-[50px] leading-[38px] text-[#221955] font-bold text-center"
-        >
-          Программа IQ Blank включает
-          <span class="text-[#6A6BF8]">
-            всё необходимое для автономной работы</span
-          >
-          без <br />
-          дополнительных трат.
-        </h3>
-        <h4
-          class="text-[25px] mt-[64px] leading-[38px] text-[#221955] font-bold text-center"
-        >
-          Вы платите один раз <span class="text-[#6A6BF8]"> и получаете:</span>
-        </h4>
-      </section>
+    <section class="container max-w-7xl mx-auto mt-[150px] mb-[50px]">
+      <h2 class="text-[50px] leading-[100%] text-[#221955] font-bold text-center">
+        Что входит <span class="text-[#6A6BF8]"> в стоимость</span>
+      </h2>
+      <h3 class="text-[25px] mt-[50px] leading-[38px] text-[#221955] font-bold text-center">
+        Программа IQ Blank включает
+        <span class="text-[#6A6BF8]">
+          всё необходимое для автономной работы</span>
+        без <br />
+        дополнительных трат.
+      </h3>
+      <h4 class="text-[25px] mt-[64px] leading-[38px] text-[#221955] font-bold text-center">
+        Вы платите один раз <span class="text-[#6A6BF8]"> и получаете:</span>
+      </h4>
+    </section>
 
-      <section
-        class="container max-w-7xl mx-auto flex gap-[88px] text-[20px] leading-[30px] tracking-[0.18px] font-normal"
-      >
+    <section
+      class="container max-w-7xl mx-auto flex gap-[88px] text-[20px] leading-[30px] tracking-[0.18px] font-normal">
+      <div class="flex flex-col gap-[42px]">
+        <button class="shadow2 w-[596px] p-6 rounded-full">
+          Неограниченную печать документов
+        </button>
+        <button class="shadow2 w-[596px] p-6 rounded-full">
+          Полный доступ ко всем функциям
+        </button>
+        <button class="shadow2 w-[596px] p-6 rounded-full">
+          QR-коды на документах
+        </button>
+      </div>
+      <div class="flex flex-col gap-[42px]">
+        <button class="shadow2 w-[596px] p-6 rounded-full">
+          Локальную установку без интернета
+        </button>
+        <button class="shadow2 w-[596px] p-6 rounded-full">
+          Инструменты редактирования шаблонов
+        </button>
+        <button class="shadow2 w-[596px] p-6 rounded-full">
+          Бесплатную инструкцию по эксплуатации
+        </button>
+      </div>
+    </section>
+
+    <section class="container max-w-7xl mx-auto text-center mt-[144px] mb-[105px]">
+      <h2 class="text-[50px] leading-[100%] text-[#221955] font-bold">Сравнение версий <span class="text-[#6A6BF8]"> IQ
+          Blank</span></h2>
+      <h3 class="text-[25px] mt-[50px] leading-[38px] text-[#221955] font-bold">Подберите решение под вашу организацию.
+        <br> Мы предлагаем <span class="text-[#6A6BF8]"> версии для школ, колледжей и других учебных
+          заведений.
+      </h3>
+      </span>
+    </section>
+    <section class="container max-w-7xl mx-auto mb-[120px]">
+      <div class="overflow-hidden rounded-4xl border border-purple-300 shadow2">
+        <table class="min-w-full text-center text-[25px] leading-[38px] text-[#221955] font-bold">
+          <thead>
+            <tr class="">
+              <th class="px-6 py-4 border border-purple-300">Функция</th>
+              <th class="px-6 py-4 border border-purple-300">Версия 1.0 (Аттестаты)</th>
+              <th class="px-6 py-4 border border-purple-300">Версия 2.0 (Дипломы СПО)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="px-6 py-4 border border-purple-300">Печать аттестатов</td>
+              <td class="px-6 py-4 border border-purple-300">✔️</td>
+              <td class="px-6 py-4 border border-purple-300">❌</td>
+            </tr>
+            <tr class="">
+              <td class="px-6 py-4 border border-purple-300">Печать дипломов и приложений</td>
+              <td class="px-6 py-4 border border-purple-300">❌</td>
+              <td class="px-6 py-4 border border-purple-300">✔️</td>
+            </tr>
+            <tr>
+              <td class="px-6 py-4 border border-purple-300">QR-коды</td>
+              <td class="px-6 py-4 border border-purple-300">✔️</td>
+              <td class="px-6 py-4 border border-purple-300">✔️</td>
+            </tr>
+            <tr class="">
+              <td class="px-6 py-4 border border-purple-300">Редактор шаблонов</td>
+              <td class="px-6 py-4 border border-purple-300">✔️</td>
+              <td class="px-6 py-4 border border-purple-300">✔️</td>
+            </tr>
+            <tr>
+              <td class="px-6 py-4 border border-purple-300">Возможность переноса лицензии</td>
+              <td class="px-6 py-4 border border-purple-300">❌</td>
+              <td class="px-6 py-4 border border-purple-300">✔️</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+
+    <section class="container max-w-7xl mx-auto">
+      <h2 class="mb-[112px] text-[50px] leading-[100%] text-[#221955] font-bold text-center">Дополнительные <span
+          class="text-[#6A6BF8]"> возможности </span> </h2>
+      <div class="flex items-center justify-center gap-[88px]">
         <div class="flex flex-col gap-[42px]">
-          <button class="shadow2 w-[596px] p-6 rounded-full">
-            Неограниченную печать документов
+          <button class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
+            <p class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">1</p>
+            Автономная работа без интернета
           </button>
-          <button class="shadow2 w-[596px] p-6 rounded-full">
-            Полный доступ ко всем функциям
+          <button class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
+            <p class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">2</p>
+            Защита QR-кодами
           </button>
-          <button class="shadow2 w-[596px] p-6 rounded-full">
-            QR-коды на документах
+          <button class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
+            <p class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">3</p>
+            Локальная база шаблонов
           </button>
         </div>
         <div class="flex flex-col gap-[42px]">
-          <button class="shadow2 w-[596px] p-6 rounded-full">
-            Локальную установку без интернета
+          <button class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
+            <p class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">4</p>
+            Простая установка
           </button>
-          <button class="shadow2 w-[596px] p-6 rounded-full">
-            Инструменты редактирования шаблонов
+          <button class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
+            <p class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">5</p>
+            Совместимость с Windows
           </button>
-          <button class="shadow2 w-[596px] p-6 rounded-full">
-            Бесплатную инструкцию по эксплуатации
+          <button class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
+            <p class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">6</p>
+            Работа без серверов и облаков
           </button>
         </div>
-      </section>
-    </main>
-  </body>
+
+      </div>
+    </section>
+
+  </main>
+</body>
+
 </html>
