--- a/pages/price.html
+++ b/pages/price.html
@@ -226,34 +226,70 @@
           class="text-[#6A6BF8]"> возможности </span> </h2>
       <div class="flex items-center justify-center gap-[88px]">
         <div class="flex flex-col gap-[42px]">
-          <button class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
-            <p class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">1</p>
+          <button
+            class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
+            <p
+              class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">
+              1</p>
             Автономная работа без интернета
           </button>
-          <button class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
-            <p class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">2</p>
+          <button
+            class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
+            <p
+              class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">
+              2</p>
             Защита QR-кодами
           </button>
-          <button class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
-            <p class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">3</p>
+          <button
+            class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
+            <p
+              class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">
+              3</p>
             Локальная база шаблонов
           </button>
         </div>
         <div class="flex flex-col gap-[42px]">
-          <button class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
-            <p class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">4</p>
+          <button
+            class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
+            <p
+              class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">
+              4</p>
             Простая установка
           </button>
-          <button class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
-            <p class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">5</p>
+          <button
+            class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
+            <p
+              class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">
+              5</p>
             Совместимость с Windows
           </button>
-          <button class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
-            <p class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">6</p>
+          <button
+            class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal">
+            <p
+              class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]">
+              6</p>
             Работа без серверов и облаков
           </button>
         </div>
+      </div>
+    </section>
 
+    <section class="container max-w-7xl mx-auto mt-[81px] relative">
+      <h2 class="text-[60px] leading-[38px] text-[#221955] font-bold text-center">
+        Оформление
+        <span class="text-[#6A6BF8]"> договора и техподдержка </span>
+      </h2>
+      <div
+        class="w-[1280px] tracking-[0.2px]  text-[25px] mt-[77px] leading-[30px] text-normal text-[#252B3B] shadow2 pt-[100px] px-[88px] rounded-[55px] ">
+        <p>Если вам нужно оформить договор или получить счёт на оплату, напишите на</p>
+        <p class="mb-[36px]"> info@iqblank.ru </p>
+        <p class="mb-[36px]"> По вопросам установки и работы программы — support@iqblank.ru </p>
+        <p> Ответим в течение 1 рабочего дня </p>
+        <br>
+        <button class="button_border rounded-full px-[42px] py-[16px] mt-[53px] mb-[34px]">
+          <span>Оставить заявку</span>
+        </button>
+        <h3 class="absolute text-[150px] text-[#5C4EAE33] font-bold right-[20px] top-[266px]">IQ</h3>
       </div>
     </section>
 
