--- a/pages/price.html
+++ b/pages/price.html
@@ -80,7 +80,7 @@
     <section class="container max-w-7xl mx-auto mt-[100px]">
       <div class="flex items-center justify-center gap-[104px]">
         <!-- Card 1 -->
-        <div class="bg-white rounded-[30px] shadow-md w-[480px] h-[480px] p-6 flex flex-col justify-between">
+        <div class="bg-white rounded-[30px] shadow2 w-[480px] h-[480px] p-6 flex flex-col justify-between">
           <div>
             <div
               class="text-[25px] leading-[100%] text-white bg-purple-500 px-[17px] py-[6px] rounded-full inline-block mb-[49px]">
@@ -97,13 +97,13 @@
             </ul>
           </div>
           <button
-            class="mt-[90px] border-2 border-purple-400  rounded-full py-2 text-base font-medium hover:bg-purple-50 transition">
-            Получить лицензию
+            class="mt-[90px] rounded-full py-2 text-base font-medium transition button_border">
+           <span> Получить лицензию</span>
           </button>
         </div>
 
         <!-- Card 2 -->
-        <div class="bg-white rounded-[30px] shadow-md w-[480px] h-[480px] p-6 flex flex-col justify-between">
+        <div class="bg-white rounded-[30px] shadow2 w-[480px] h-[480px] p-6 flex flex-col justify-between">
           <div>
             <div
               class="text-[25px] leading-[100%] text-white bg-purple-500 px-[17px] py-[6px] rounded-full inline-block mb-[49px]">
@@ -122,8 +122,8 @@
             </ul>
           </div>
           <button
-            class="border-2 border-purple-400  rounded-full py-2 text-base font-medium hover:bg-purple-50 transition">
-            Получить лицензию
+            class="rounded-full py-2 text-base font-medium transition button_border">
+            <span>Получить лицензию</span>
           </button>
         </div>
       </div>
