--- a/pages/price.html
+++ b/pages/price.html
@@ -44,6 +44,17 @@
     </header>
     <main>
       <section class="container max-w-7xl mx-auto">
+        <div class="flex items-center justify-start gap-5 mb-16">
+          <a href="../index.html">
+            <img src="../imgs/homesvg.svg" alt="" />
+          </a>
+          <img src="../imgs/arrowright.svg" alt="" />
+          <p class="text-[#28293D] text-2xl">
+            Цены на программу дял печати на бланках документов IQ Blank
+          </p>
+        </div>
+      </section>
+      <section class="container max-w-7xl mx-auto">
         <h1
           class="text-[60px] leading-[100%] text-[#221955] font-bold text-center"
         >
@@ -68,6 +79,11 @@
           >
             <span>Скачать демо-версию</span>
           </button>
+          <img
+            src="../imgs/icon1.svg"
+            alt=""
+            class="mt-[-30px] rotate-[15.37deg]"
+          />
         </div>
         <h1
           class="text-[50px] leading-[100%] text-[#221955] font-bold text-center mt-[97px]"
@@ -90,13 +106,15 @@
         <div class="flex items-center justify-center gap-[104px]">
           <!-- Card 1 -->
           <div
-            class="bg-white rounded-[30px] shadow-md w-[480px] h-[480px] p-6 flex flex-col justify-between"
+            class="bg-white rounded-[30px] shadow2 w-[480px] h-[480px] p-6 flex flex-col justify-between"
           >
             <div>
-              <div
-                class="text-[25px] leading-[100%] text-white bg-purple-500 px-[17px] py-[6px] rounded-full inline-block mb-[49px]"
-              >
-                IQ Blank 1.0 (Аттестаты)
+              <div class="flex justify-center">
+                <div
+                  class="text-[25px] w leading-[100%] text-white bg-purple-500 px-[17px] py-[6px] rounded-full inline-block mb-[49px]"
+                >
+                  IQ Blank 1.0 (Аттестаты)
+                </div>
               </div>
               <div class="text-[30px] font-bold mb-[26px] text-[#212D31]">
                 1 лицензия — <span class="">3000 ₽</span>
@@ -104,10 +122,21 @@
               <ul
                 class="text-gray-700 text-[20px] leading-[100%] text-[#212D31] font-normal space-y-4"
               >
-                <li>✅ Использовать на одном компьютере</li>
-                <li>✅ Поддержка и обновления — 1500 ₽ в год</li>
-                <li>✅ Доступ к обновлениям</li>
-                <li>✅ Локальная база, работа без интернета</li>
+                <li>
+                  <img src="../imgs/chaqmoq.svg" alt="" /> Использовать на одном
+                  компьютере
+                </li>
+                <li>
+                  <img src="../imgs/chaqmoq.svg" alt="" /> Поддержка и
+                  обновления — 1500 ₽ в год
+                </li>
+                <li>
+                  <img src="../imgs/chaqmoq.svg" alt="" /> Доступ к обновлениям
+                </li>
+                <li>
+                  <img src="../imgs/chaqmoq.svg" alt="" /> Локальная база,
+                  работа без интернета
+                </li>
               </ul>
             </div>
             <button
@@ -119,13 +148,15 @@
 
           <!-- Card 2 -->
           <div
-            class="bg-white rounded-[30px] shadow-md w-[480px] h-[480px] p-6 flex flex-col justify-between"
+            class="bg-white rounded-[30px] shadow2 w-[480px] h-[480px] p-6 flex flex-col justify-between"
           >
             <div>
-              <div
-                class="text-[25px] leading-[100%] text-white bg-purple-500 px-[17px] py-[6px] rounded-full inline-block mb-[49px]"
-              >
-                IQ Blank 2.0 (Дипломы СПО)
+              <div class="flex justify-center">
+                <div
+                  class="text-[25px] leading-[100%] text-white bg-purple-500 px-[17px] py-[6px] rounded-full inline-block mb-[49px]"
+                >
+                  IQ Blank 2.0 (Дипломы СПО)
+                </div>
               </div>
               <div class="text-[30px] font-bold mb-[26px] text-[#212D31]">
                 1 лицензия — <span class="font-bold">3000 ₽</span>
@@ -133,12 +164,28 @@
               <ul
                 class="text-gray-700 text-[20px] leading-[100%] text-[#212D31] font-normal space-y-4"
               >
-                <li>✅ Использовать на одном компьютере</li>
-                <li>✅ Поддержка и обновления — 1500 ₽ в год</li>
-                <li>✅ Доступ к обновлениям</li>
-                <li>✅ Перенос лицензии</li>
-                <li>✅ Локальная база, работа без интернета</li>
-                <li>✅ Печать дипломов, приложений</li>
+                <li>
+                  <img src="../imgs/chaqmoq.svg" alt="" /> Использовать на одном
+                  компьютере
+                </li>
+                <li>
+                  <img src="../imgs/chaqmoq.svg" alt="" /> Поддержка и
+                  обновления — 1500 ₽ в год
+                </li>
+                <li>
+                  <img src="../imgs/chaqmoq.svg" alt="" /> Доступ к обновлениям
+                </li>
+                <li>
+                  <img src="../imgs/chaqmoq.svg" alt="" /> Перенос лицензии
+                </li>
+                <li>
+                  <img src="../imgs/chaqmoq.svg" alt="" /> Локальная база,
+                  работа без интернета
+                </li>
+                <li>
+                  <img src="../imgs/chaqmoq.svg" alt="" /> Печать дипломов,
+                  приложений
+                </li>
               </ul>
             </div>
             <button
@@ -197,6 +244,197 @@
           <button class="shadow2 w-[596px] p-6 rounded-full">
             Бесплатную инструкцию по эксплуатации
           </button>
+        </div>
+      </section>
+
+      <section
+        class="container max-w-7xl mx-auto text-center mt-[144px] mb-[105px]"
+      >
+        <h2 class="text-[50px] leading-[100%] text-[#221955] font-bold">
+          Сравнение версий <span class="text-[#6A6BF8]"> IQ Blank</span>
+        </h2>
+        <h3
+          class="text-[25px] mt-[50px] leading-[38px] text-[#221955] font-bold"
+        >
+          Подберите решение под вашу организацию. <br />
+          Мы предлагаем
+          <span class="text-[#6A6BF8]">
+            версии для школ, колледжей и других учебных заведений.
+          </span>
+        </h3>
+      </section>
+      <section class="container max-w-7xl mx-auto mb-[120px]">
+        <div
+          class="overflow-hidden rounded-4xl border border-purple-300 shadow2"
+        >
+          <table
+            class="min-w-full text-center text-[25px] leading-[38px] text-[#221955] font-bold"
+          >
+            <thead>
+              <tr class="">
+                <th class="px-6 py-4 border border-purple-300">Функция</th>
+                <th class="px-6 py-4 border border-purple-300">
+                  Версия 1.0 (Аттестаты)
+                </th>
+                <th class="px-6 py-4 border border-purple-300">
+                  Версия 2.0 (Дипломы СПО)
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="px-6 py-4 border border-purple-300">
+                  Печать аттестатов
+                </td>
+                <td class="px-6 py-4 border border-purple-300">✔️</td>
+                <td class="px-6 py-4 border border-purple-300">❌</td>
+              </tr>
+              <tr class="">
+                <td class="px-6 py-4 border border-purple-300">
+                  Печать дипломов и приложений
+                </td>
+                <td class="px-6 py-4 border border-purple-300">❌</td>
+                <td class="px-6 py-4 border border-purple-300">✔️</td>
+              </tr>
+              <tr>
+                <td class="px-6 py-4 border border-purple-300">QR-коды</td>
+                <td class="px-6 py-4 border border-purple-300">✔️</td>
+                <td class="px-6 py-4 border border-purple-300">✔️</td>
+              </tr>
+              <tr class="">
+                <td class="px-6 py-4 border border-purple-300">
+                  Редактор шаблонов
+                </td>
+                <td class="px-6 py-4 border border-purple-300">✔️</td>
+                <td class="px-6 py-4 border border-purple-300">✔️</td>
+              </tr>
+              <tr>
+                <td class="px-6 py-4 border border-purple-300">
+                  Возможность переноса лицензии
+                </td>
+                <td class="px-6 py-4 border border-purple-300">❌</td>
+                <td class="px-6 py-4 border border-purple-300">✔️</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
+
+      <section class="container max-w-7xl mx-auto">
+        <h2
+          class="mb-[112px] text-[50px] leading-[100%] text-[#221955] font-bold text-center"
+        >
+          Дополнительные <span class="text-[#6A6BF8]"> возможности </span>
+        </h2>
+        <div class="flex items-center justify-center gap-[88px]">
+          <div class="flex flex-col gap-[42px]">
+            <button
+              class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal"
+            >
+              <p
+                class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]"
+              >
+                1
+              </p>
+              Автономная работа без интернета
+            </button>
+            <button
+              class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal"
+            >
+              <p
+                class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]"
+              >
+                2
+              </p>
+              Защита QR-кодами
+            </button>
+            <button
+              class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal"
+            >
+              <p
+                class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]"
+              >
+                3
+              </p>
+              Локальная база шаблонов
+            </button>
+          </div>
+          <div class="flex flex-col gap-[42px]">
+            <button
+              class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal"
+            >
+              <p
+                class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]"
+              >
+                4
+              </p>
+              Простая установка
+            </button>
+            <button
+              class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal"
+            >
+              <p
+                class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]"
+              >
+                5
+              </p>
+              Совместимость с Windows
+            </button>
+            <button
+              class="relative shadow2 w-[596px] h-[116px] p-6 rounded-[35px] text-[20px] leading-[30px] font-normal"
+            >
+              <p
+                class="absolute text-[120px] leading-[38px] text-[#5C4EAE33] w-[51] h-[39] text-center font-bold top-[28px] left-[25px]"
+              >
+                6
+              </p>
+              Работа без серверов и облаков
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <section class="container max-w-7xl mx-auto mt-[81px] relative">
+        <h2
+          class="text-[60px] leading-[38px] text-[#221955] font-bold text-center"
+        >
+          Часто задаваемые вопросы
+          <span class="text-[#6A6BF8]"> о покупке и лицензии </span>
+        </h2>
+        <div
+          class="w-[1280px] tracking-[0.2px] text-[25px] mt-[77px] leading-[30px] text-normal text-[#252B3B] shadow2 pt-[100px] px-[88px] rounded-[55px]"
+        ></div>
+      </section>
+      <section class="container max-w-7xl mx-auto mt-[81px] relative">
+        <h2
+          class="text-[60px] leading-[38px] text-[#221955] font-bold text-center"
+        >
+          Оформление
+          <span class="text-[#6A6BF8]"> договора и техподдержка </span>
+        </h2>
+        <div
+          class="w-[1280px] tracking-[0.2px] text-[25px] mt-[77px] leading-[30px] text-normal text-[#252B3B] shadow2 pt-[100px] px-[88px] rounded-[55px]"
+        >
+          <p>
+            Если вам нужно оформить договор или получить счёт на оплату,
+            напишите на
+          </p>
+          <p class="mb-[36px]">info@iqblank.ru</p>
+          <p class="mb-[36px]">
+            По вопросам установки и работы программы — support@iqblank.ru
+          </p>
+          <p>Ответим в течение 1 рабочего дня</p>
+          <br />
+          <button
+            class="button_border rounded-full px-[42px] py-[16px] mt-[53px] mb-[34px]"
+          >
+            <span>Оставить заявку</span>
+          </button>
+          <h3
+            class="absolute text-[150px] text-[#5C4EAE33] font-bold right-[20px] top-[266px]"
+          >
+            IQ
+          </h3>
         </div>
       </section>
     </main>
