--- a/index.html
+++ b/index.html
@@ -158,6 +158,437 @@
           </div>
         </div>
       </section>
+      <section class="max-w-7xl mx-auto">
+        <h2
+          class="text-[60px] leading-[38px] text-[#221955] font-bold text-center mb-10 mt-26"
+        >
+          Для кого
+          <span class="text-[#6A6BF8]">подходит</span>
+        </h2>
+        <div class="grid grid-cols-4 space-x-8 mb-30 mt-16">
+          <div
+            class="flex items-center justify-center shadow2 py-[35px] text-[30px] text-[#221955] font-bold rounded-[33px]"
+          >
+            Свидетельства
+          </div>
+          <div
+            class="flex items-center justify-center shadow2 py-[35px] text-[30px] text-[#221955] font-bold rounded-[33px]"
+          >
+            Свидетельства
+          </div>
+          <div
+            class="flex items-center justify-center shadow2 py-[35px] text-[30px] text-[#221955] font-bold rounded-[33px]"
+          >
+            Свидетельства
+          </div>
+          <div
+            class="flex items-center justify-center shadow2 py-[35px] text-[30px] text-[#221955] font-bold rounded-[33px]"
+          >
+            Свидетельства
+          </div>
+        </div>
+      </section>
+      <section class="max-w-7xl mx-auto">
+        <h2
+          class="text-[60px] leading-[55px] text-[#221955] font-bold text-center mb-10 mt-6"
+        >
+          Демо-версия системы
+          <span class="text-[#6A6BF8]">автоматизации документооборота</span>
+        </h2>
+        <p class="text-[#221955] text-[30px] text-center mb-[78px]">
+          Оптимизируйте работу с документами в вашем образовательном учреждении!
+        </p>
+        <div class="px-22 mb-12">
+          <div class="div_gradient">
+            <img
+              src="./imgs/threeline.svg"
+              alt=""
+              class="absolute right-[-40px] top-[-40px]"
+            />
+            <div class="inner_content">
+              <p
+                class="text-[#221955] text-[30px] text-center mb-6 leading-[30px]"
+              >
+                Представляем демо-версию инновационной системы автоматизации
+                печати и заполнения документов для школ, колледжей и вузов.
+              </p>
+              <p
+                class="text-[#252B3B] font-bold text-[30px] text-center leading-[30px]"
+              >
+                Получите бесплатный доступ к полному функционалу системы на 14
+                дней и оцените все преимущества цифровой трансформации
+                документооборота.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="grid grid-cols-2 gap-5 items-stretch">
+          <div class="flex flex-col items-center justify-center h-full">
+            <h3 class="text-[#6A6BF8] text-[50px] mb-[64px] font-bold">
+              Что вы полчаете:
+            </h3>
+            <div class="shadow2 p-14 rounded-[55px] h-full">
+              <div class="flex gap-3 items-center mb-3">
+                <img src="./imgs/check.svg" alt="" />
+                <p class="text-2xl">
+                  Автоматическое заполнение типовых документов
+                </p>
+              </div>
+              <div class="flex gap-3 items-center mb-3">
+                <img src="./imgs/check.svg" alt="" />
+                <p class="text-2xl">
+                  Быструю печать аттестатов, справок и других бланков
+                </p>
+              </div>
+              <div class="flex gap-3 items-center mb-3">
+                <img src="./imgs/check.svg" alt="" />
+                <p class="text-2xl">Электронное хранение архива документов</p>
+              </div>
+              <div class="flex gap-3 items-center mb-3">
+                <img src="./imgs/check.svg" alt="" />
+                <p class="text-2xl">Защищенный доступ через личный кабинет</p>
+              </div>
+              <div class="flex gap-3 items-center mb-3">
+                <img src="./imgs/check.svg" alt="" />
+                <p class="text-2xl">
+                  Интеграцию с существующими системами учета
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="flex flex-col items-center justify-center h-full">
+            <h3 class="text-[#6A6BF8] text-[50px] mb-[64px] font-bold">
+              Что вы полчаете:
+            </h3>
+            <div class="shadow2 p-14 rounded-[55px] h-full">
+              <div class="flex gap-3 items-center mb-3">
+                <img src="./imgs/circle.svg" alt="" />
+                <p class="text-2xl">
+                  Экономия времени на рутинных операциях до 80%
+                </p>
+              </div>
+              <div class="flex gap-3 items-center mb-3">
+                <img src="./imgs/circle.svg" alt="" />
+                <p class="text-2xl">
+                  Исключение ошибок при заполнении документов
+                </p>
+              </div>
+              <div class="flex gap-3 items-center mb-3">
+                <img src="./imgs/circle.svg" alt="" />
+                <p class="text-2xl">
+                  Соответствие всем требованиям законодательства
+                </p>
+              </div>
+              <div class="flex gap-3 items-center mb-3">
+                <img src="./imgs/circle.svg" alt="" />
+                <p class="text-2xl">Простое обучение персонала</p>
+              </div>
+              <div class="flex gap-3 items-center mb-3">
+                <img src="./imgs/circle.svg" alt="" />
+                <p class="text-2xl">Техническая поддержка 24/7</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <p
+          class="text-[#252B3B] max-w-[920px] font-bold text-[30px] text-center leading-[30px] mx-auto my-18"
+        >
+          Начните использовать демо-версию уже сейчас!Количество демо-доступов
+          ограничено.
+        </p>
+        <div class="flex gap-12 mt-8 relative justify-center mb-20">
+          <img
+            src="./imgs/icon1.svg"
+            alt=""
+            class="absolute left-[60%] top-[-40px]"
+          />
+          <button
+            class="px-4 h-[60px] w-[257px] text-[24px] button_bg rounded-full"
+          >
+            <span class="text-white">Скачать демо</span>
+          </button>
+        </div>
+      </section>
+      <section class="max-w-7xl mx-auto">
+        <h2 class="text-[60px] text-[#221955] font-bold text-left mb-8 mt-16">
+          О
+          <span class="text-[#6A6BF8]"> продукте</span>
+        </h2>
+        <div class="grid grid-cols-3 gap-5">
+          <div class="flex flex-col">
+            <div class="div_gradient">
+              <div class="inner_content flex items-center justify-center">
+                <img src="./imgs/product1.png" alt="" />
+              </div>
+            </div>
+            <p class="mt-5 text-[30px] text-center leading-[100%]">
+              Позволяет печатать на бланках документов об образовании.
+            </p>
+          </div>
+          <div class="flex flex-col mb-20">
+            <div class="div_gradient">
+              <div class="inner_content flex items-center justify-center">
+                <img src="./imgs/product2.png" alt="" />
+              </div>
+            </div>
+            <p class="mt-5 text-[30px] text-center leading-[100%]">
+              Поддерживает печать с QR-кодами и защитой.
+            </p>
+          </div>
+          <div class="flex flex-col">
+            <div class="div_gradient">
+              <div class="inner_content flex items-center justify-center">
+                <img
+                  src="./imgs/product3.png"
+                  alt=""
+                  class="mt-[-40px] h-full"
+                />
+              </div>
+            </div>
+            <p class="mt-5 text-[30px] text-center leading-[100%]">
+              Обеспечивает автономность, оперативность и самостоятельность.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="max-w-7xl mx-auto">
+        <h2 class="text-[60px] text-[#221955] font-bold text-center mb-8 mt-16">
+          Что вы
+          <span class="text-[#6A6BF8]">получите</span>
+        </h2>
+        <div class="grid grid-cols-4 gap-14 items-stretch">
+          <div class="flex flex-col h-full">
+            <div class="div_gradient shadow2 h-[284px]">
+              <div class="inner_content flex flex-col h-[280px]">
+                <img src="./imgs/item1.png" alt="" class="mt-[-84px]" />
+                <p
+                  class="mt-2 text-[25px] text-center leading-[38px] text-[#7A55FF] font-medium grow-1 flex items-center justify-center"
+                >
+                  Печать с QR
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="flex flex-col mb-20 h-full">
+            <div class="div_gradient shadow2 h-[284px]">
+              <div class="inner_content flex flex-col h-[280px]">
+                <img src="./imgs/item2.png" alt="" class="mt-[-64px]" />
+                <p
+                  class="mt-2 text-[25px] text-center leading-[38px] text-[#7A55FF] font-medium grow-1 flex items-center justify-center"
+                >
+                  Настройка без программиста
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="flex flex-col mb-20 h-full">
+            <div class="div_gradient shadow2 h-[284px]">
+              <div class="inner_content flex flex-col h-[280px]">
+                <img src="./imgs/item3.png" alt="" class="mt-[-84px]" />
+                <p
+                  class="mt-2 text-[25px] text-center leading-[38px] text-[#7A55FF] font-medium grow-1 flex items-center justify-center"
+                >
+                  База шаблонов
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="flex flex-col mb-20 h-full">
+            <div class="div_gradient shadow2 h-[284px]">
+              <div class="inner_content flex flex-col h-[280px]">
+                <img src="./imgs/item4.png" alt="" class="mt-[-84px]" />
+                <p
+                  class="mt-2 text-[25px] text-center leading-[38px] text-[#7A55FF] font-medium grow-1 flex items-center justify-center"
+                >
+                  Экономия времени
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="max-w-7xl mx-auto">
+        <h2 class="text-[60px] text-[#221955] font-bold text-center mb-8 mt-16">
+          Почему нам
+          <span class="text-[#6A6BF8]">доверяют</span>
+        </h2>
+        <h3 class="text-[50px] text-[#252B3B] text-center mb-8 mt-16">
+          Наши
+          <span class="text-[#6A6BF8]">кейсы</span>
+        </h3>
+        <div class="shadow2 rounded-[55px] p-10 mb-8">
+          <h2 class="text-[#252B3B] text-[40px] mb-7 font-semibold ml-10">
+            Модернизация документооборота ВУЗа
+          </h2>
+          <div class="flex">
+            <div class="max-w-[880px]">
+              <h3 class="text-[#252B3B] text-[30px] font-medium ml-10">
+                Описание проблемы:
+              </h3>
+              <p class="text-[#252B3B] text-[25px] mt-6 leading-[30px] ml-10">
+                Крупный государственный университет столкнулся с необходимостью
+                перехода на новую систему защиты документов об образовании с
+                использованием QR-кодов в соответствии с последними приказами
+                Минобрнауки.
+              </p>
+            </div>
+            <div class="">
+              <img src="./imgs/Chart 9.png" alt="" />
+            </div>
+          </div>
+          <div class="flex gap-5">
+            <div>
+              <h3 class="text-[#252B3B] text-[30px] font-medium ml-10">
+                Решение
+              </h3>
+              <ul class="mt-6 ml-20">
+                <li class="text-[#252B3B] list-disc text-[25px] leading-[30px]">
+                  Внедрение современного оборудования для печати защищенных
+                  документов
+                </li>
+                <li class="text-[#252B3B] list-disc text-[25px] leading-[30px]">
+                  Настройка программного обеспечения для генерации и верификации
+                  QR-кодов
+                </li>
+                <li class="text-[#252B3B] list-disc text-[25px] leading-[30px]">
+                  Обучение персонала работе с новой системой
+                </li>
+                <li class="text-[#252B3B] list-disc text-[25px] leading-[30px]">
+                  Разработка внутренних регламентов по работе с защищенными
+                  документами
+                </li>
+              </ul>
+              <div class="px-10 mt-9">
+                <div class="div_gradient">
+                  <img
+                    src="./imgs/threeline.svg"
+                    alt=""
+                    class="absolute right-[-35px] top-[-35px]"
+                  />
+                  <div class="inner_content">
+                    <h3 class="text-[#252B3B] text-[30px] font-medium">
+                      Результат:
+                    </h3>
+                    <ul class="mt-6 ml-10">
+                      <li
+                        class="text-[#252B3B] list-disc text-[25px] leading-[30px]"
+                      >
+                        Сокращение времени на печать документов на 40%
+                      </li>
+                      <li
+                        class="text-[#252B3B] list-disc text-[25px] leading-[30px]"
+                      >
+                        Полное соответствие требованиям безопасности
+                      </li>
+                      <li
+                        class="text-[#252B3B] list-disc text-[25px] leading-[30px]"
+                      >
+                        Упрощение процедуры верификации документов
+                      </li>
+                      <li
+                        class="text-[#252B3B] list-disc text-[25px] leading-[30px]"
+                      >
+                        Снижение риска подделки документов до минимума
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="div shadow2 p-10 relative rounded-[20px] h-max">
+              <img src="./imgs/chart.svg" alt="" />
+              <div
+                class="flex flex-col items-center justify-center absolute left-[50%] top-[50%] translate-[-50%]"
+              >
+                <h4 class="text-[#1E1B39] text-[44px] mb-0 font-bold">1.05</h4>
+                <p class="text-lg text-[#9291A5] mt-[-16px]">Документооборот</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="shadow2 rounded-[55px] p-10">
+          <h2 class="text-[#252B3B] text-[40px] mb-7 font-semibold ml-10">
+            Экспресс-выпуск аттестатов в школе
+          </h2>
+
+          <div class="flex gap-5 justify-between">
+            <div class="max-w-[768px]">
+              <div class="max-w-[880px]">
+                <h3 class="text-[#252B3B] text-[30px] font-medium ml-10">
+                  Описание проблемы:
+                </h3>
+                <p class="text-[#252B3B] text-[25px] mt-6 leading-[30px] ml-10">
+                  Средняя образовательная школа в преддверии выпускного
+                  столкнулась с необходимостью срочной печати аттестатов с
+                  QR-защитой для 200 выпускников. Существующее решение не
+                  позволяло уложиться в установленные сроки.
+                </p>
+              </div>
+              <h3 class="text-[#252B3B] text-[30px] font-medium ml-10">
+                Решение:
+              </h3>
+              <ul class="mt-6 ml-20">
+                <li class="text-[#252B3B] list-disc text-[25px] leading-[30px]">
+                  Мобилизация дополнительных ресурсов для печати
+                </li>
+                <li class="text-[#252B3B] list-disc text-[25px] leading-[30px]">
+                  Оптимизация процесса подготовки данных
+                </li>
+                <li class="text-[#252B3B] list-disc text-[25px] leading-[30px]">
+                  Параллельная работа с несколькими операторами
+                </li>
+                <li class="text-[#252B3B] list-disc text-[25px] leading-[30px]">
+                  Использование высокоскоростного оборудования
+                </li>
+              </ul>
+              <div class="px-10 mt-9">
+                <div class="div_gradient">
+                  <img
+                    src="./imgs/threeline.svg"
+                    alt=""
+                    class="absolute right-[-35px] top-[-35px]"
+                  />
+                  <div class="inner_content">
+                    <h3 class="text-[#252B3B] text-[30px] font-medium">
+                      Результат:
+                    </h3>
+                    <ul class="mt-6 ml-10">
+                      <li
+                        class="text-[#252B3B] list-disc text-[25px] leading-[30px]"
+                      >
+                        Выпуск всех аттестатов за 3 рабочих дня
+                      </li>
+                      <li
+                        class="text-[#252B3B] list-disc text-[25px] leading-[30px]"
+                      >
+                        100% соответствие требованиям безопасности
+                      </li>
+                      <li
+                        class="text-[#252B3B] list-disc text-[25px] leading-[30px]"
+                      >
+                        Отсутствие ошибок в документах
+                      </li>
+                      <li
+                        class="text-[#252B3B] list-disc text-[25px] leading-[30px]"
+                      >
+                        Положительные отзывы администрации и выпускников
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="rounded-[20px] flex items-center justify-center grow-1">
+              <img src="./imgs/product1.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="flex justify-center mb-20 mt-[95px]">
+          <button class="button_border w-[250px] h-[60px] text-lg rounded-full">
+            <span>Показать все</span>
+          </button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
